; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_lookup_save.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_lookup_save.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lookup_save(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %16 = load i8*, i8** %6, align 8
  store i8* %16, i8** %9, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @lookup_save_expected_len(i32* %17)
  store i32 %18, i32* %10, align 4
  %19 = load i32, i32* %10, align 4
  %20 = sext i32 %19 to i64
  %21 = mul i64 4, %20
  store i64 %21, i64* %11, align 8
  %22 = load i64, i64* %11, align 8
  %23 = call i32* @dl_malloc(i64 %22)
  store i32* %23, i32** %12, align 8
  %24 = load i64, i64* %11, align 8
  %25 = call i32* @dl_malloc(i64 %24)
  store i32* %25, i32** %13, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = load i32*, i32** %13, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @lookup_save_prepare(i32* %26, i32* %27, i32* %28, i32 %29, i32 %30)
  store i32 %31, i32* %14, align 4
  %32 = load i32*, i32** %12, align 8
  %33 = load i32*, i32** %13, align 8
  %34 = load i32, i32* %14, align 4
  %35 = load i8*, i8** %9, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i32 @lookup_save_write(i32* %32, i32* %33, i32 %34, i8* %35, i32 %36)
  store i32 %37, i32* %15, align 4
  %38 = load i32, i32* %15, align 4
  %39 = load i8*, i8** %9, align 8
  %40 = sext i32 %38 to i64
  %41 = getelementptr inbounds i8, i8* %39, i64 %40
  store i8* %41, i8** %9, align 8
  %42 = load i32, i32* %15, align 4
  %43 = load i32, i32* %7, align 4
  %44 = sub nsw i32 %43, %42
  store i32 %44, i32* %7, align 4
  %45 = load i32*, i32** %12, align 8
  %46 = load i64, i64* %11, align 8
  %47 = call i32 @dl_free(i32* %45, i64 %46)
  %48 = load i32*, i32** %13, align 8
  %49 = load i64, i64* %11, align 8
  %50 = call i32 @dl_free(i32* %48, i64 %49)
  %51 = load i8*, i8** %9, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = ptrtoint i8* %51 to i64
  %54 = ptrtoint i8* %52 to i64
  %55 = sub i64 %53, %54
  %56 = trunc i64 %55 to i32
  ret i32 %56
}

declare dso_local i32 @lookup_save_expected_len(i32*) #1

declare dso_local i32* @dl_malloc(i64) #1

declare dso_local i32 @lookup_save_prepare(i32*, i32*, i32*, i32, i32) #1

declare dso_local i32 @lookup_save_write(i32*, i32*, i32, i8*, i32) #1

declare dso_local i32 @dl_free(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
